AWS/04-services/front/alb.tf
resource "aws_alb_target_group" "frontend" {
  name        = "${var.project_name}-frontend-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id               = data.aws_vpc.core.id
  target_type = "ip"
  deregistration_delay = 60

  health_check {
    enabled             = true
    healthy_threshold   = 2
    interval            = 30
    matcher             = "200"
    path                = var.frontend_health_check_path
    port                = var.frontend_port
    protocol            = "HTTP"
    timeout             = 5
    unhealthy_threshold = 2
  }

  tags = local.common_tags
}

resource "aws_alb_listener_rule" "frontend" {
  count = length(var.domain_names.frontend)

  listener_arn = data.aws_alb_listener.https.arn
  priority     = var.frontend_rule_priority + count.index

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.frontend.arn
  }

  condition {
    host_header {
      values = [var.domain_names.frontend[count.index]]
    }
  }
}
